[gd_scene load_steps=6 format=3 uid="uid://ceg3kwcsopb8p"]

[ext_resource type="Script" uid="uid://dwa3sab0sc3yc" path="res://wheel/wheel.gd" id="1_e0ure"]
[ext_resource type="Texture2D" uid="uid://b0ymin8v8lj6x" path="res://wheel/93.svg" id="2_gwn81"]
[ext_resource type="Texture2D" uid="uid://btvxbhl7b3s6" path="res://wheel/94.svg" id="3_3mgug"]
[ext_resource type="Texture2D" uid="uid://ckjp13ag17ufv" path="res://wheel/95.svg" id="4_fqxq6"]
[ext_resource type="Texture2D" uid="uid://ccc76yyth27ls" path="res://wheel/96.svg" id="5_w0tbm"]

[node name="Wheel" type="Area2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_e0ure")
possible_wheels = Array[CompressedTexture2D]([ExtResource("2_gwn81"), ExtResource("3_3mgug"), ExtResource("4_fqxq6"), ExtResource("5_w0tbm")])

[node name="MinesList" type="Node2D" parent="."]

[node name="WheelMesh" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
